ingresses/2-hubmgt/overlays/ingresses/employees/api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-employees
  namespace: apps
  annotations:
    hub.traefik.io/api: employee-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.localdemo.mageekbox.eu`) && PathPrefix(`/employees`)
      services:
        - name: employee-app-latency
          port: 3000
      middlewares:
        - name: treblle
          namespace: traefik
  tls: {}
